# design-bias

./: .env.example  .gitignore  .rumdl.toml  AGENTS.md  LICENSE  README.md  bootstrap-run.sh  bootstrap.sh  prek.toml  pyproject.toml  results_model_breakdown.txt  results_output.txt  results_palette_model.txt  results_updated.txt
configs/: pgais-debiased-lite-models.csv  pgais-debug.toml  pgais-lite-models.csv  pgais-pilot-debiased-lite.toml  pgais-pilot-lite.toml  pgais-pilot.toml
data/: debiased_system_prompt.txt  descriptors.csv  expanded_descriptors.csv  expanded_frameworks.csv  frameworks.csv  lean-system-prompt.txt  prompts-debiased-lite-dataset.parquet  prompts-lite-dataset.parquet  system_prompt.txt  userprompt_template.txt
hpc/: README.md
notebooks/: analysis.ipynb  debiased-analysis.ipynb  view_parquet.py
outputs/: representative_codellama.txt  representative_gpt-oss.txt  representative_llama4.txt
outputs/pgais-debug/: pgais-debug_llama3.3_70b.parquet
outputs/pgais-pilot/: pgais-pilot_codellama_latest.parquet  pgais-pilot_gpt-oss_120b.parquet  pgais-pilot_llama4_latest.parquet
outputs/pgais-pilot-debiased/: pgais-pilot-debiased_codellama_latest.parquet  pgais-pilot-debiased_gpt-oss_120b.parquet  pgais-pilot-debiased_llama4_latest.parquet
scripts/: analyze_results.py  check_counts.py  extract_representative_html.py  find_representative_indices.py  generate_prompts.py  generate_samples.py  run_pgais_inference.py
src/design_bias/: __init__.py  analysis.py  config.py  pgai_inference.py
src/prismal/: __init__.py  cli.py  config.py  data.py  inference.py  io.py
tests/: test_cli.py  test_config.py  test_config_validation.py  test_data.py  test_io.py
